@@ -1,3 +1,11 @@
+2007-07-25  Denis Washington <denisw@svn.gnome.org>
+
+	* appearance-style.c: (prepare_list):
+	* appearance-themes.c: (theme_load_from_gconf):
+	* theme-save.c: (write_theme_to_disk):
+	Implement saving of the cursor theme name in metathemes, and add a
+	"Default Pointer" option to the cursor theme list in Theme Details.
+
 2007-07-24  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-themes.c: (theme_load_from_gconf): when reading current
